--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ streamlit = "^1.41.1"
 chromadb = "^0.6.2"
 sentence-transformers = "^3.3.1"
 langchain-community = "^0.3.14"
+fastapi = "^0.115.7"
+uvicorn = "^0.34.0"
+faiss-cpu = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 
