--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Allan Ferreira <ferrerallan@gmail.com>"]
 
 packages = [
-  { include = "appv2" }
+  { include = "." }
 ]
 
 [tool.poetry.dependencies]
